Translations uptaded and footer links added

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,10 +22,10 @@ const year = new Date().getFullYear();
       <p class="text-title text-uppercase">Sígueme</p>
 
       <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">YouTube</a></li>
-        <li><a href="">Behance</a></li>
-        <li><a href="">LinkedIn</a></li>
+        <li><a target="_blank" href="https://www.instagram.com/gabrielaborraz/">Instagram</a></li>
+        <li><a target="_blank" href="https://www.youtube.com/channel/UCSZ1OnqX_LIHIr-JOWr0sFQ">YouTube</a></li>
+        <li><a target="_blank" href="https://www.behance.net/GabrielaBorraz">Behance</a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/gabrielaborraz/">LinkedIn</a></li>
       </ul>
     </div>
 
