--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -15,8 +15,8 @@ export { getStaticPaths };
 <Layout title= {title} description={description} active="portfolio"> 
       <section id="design" class="section">
         <div class="title">
-          <p class="text-title text-uppercase">Descubre</p>
-          <h4 class="text-large">Portafolio de diseño</h4>
+          <p class="text-title text-uppercase">{t('portfolio.design.title')}</p>
+          <h4 class="text-large">{t('portfolio.design.subtitle')}</h4>
         </div>
       </section>
 </Layout>
