--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -14,23 +14,20 @@ export { getStaticPaths };
 ---
 <Layout title= {title} description={description} active="portfolio">
   <section class="hero">
-    <h2 class="text-xlarge">
-      La magia de los videos animados
-      <span>comienza con una idea creativa</span>
-    </h2>
+    <h2 class="text-xlarge" set:html={t('portfolio.hero')}/>
   </section>
 
   <section id="multimedia" class="section">
     <div class="title">
-      <p class="text-title text-uppercase">Explora</p>
-      <h4 class="text-large">Portafolio multimedia</h4>
+      <p class="text-title text-uppercase">{t('portfolio.multimedia.title')}</p>
+      <h4 class="text-large">{t('portfolio.multimedia.subtitle')}</h4>
     </div>
   </section>
 
   <section id="design" class="section">
     <div class="title">
-      <p class="text-title text-uppercase">Descubre</p>
-      <h4 class="text-large">Portafolio de diseño</h4>
+      <p class="text-title text-uppercase">{t('portfolio.design.title')}</p>
+      <h4 class="text-large">{t('portfolio.design.subtitle')}</h4>
     </div>
   </section>
 
