--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -15,8 +15,8 @@ export { getStaticPaths };
 <Layout title= {title} description={description} active="portfolio">
     <section id="multimedia" class="section">
         <div class="title">
-          <p class="text-title text-uppercase">Explora</p>
-          <h4 class="text-large">Portafolio multimedia</h4>
+          <p class="text-title text-uppercase">{t('portfolio.multimedia.title')}</p>
+          <h4 class="text-large">{t('portfolio.multimedia.subtitle')}</h4>
         </div>
       </section>
 </Layout>
