--- a/public/global.css
+++ b/public/global.css
@@ -84,6 +84,9 @@
   /* Width */
   --max-width: calc(1440px * 0.8);
 
+  /* Borders */
+  --border-radius: 12px;
+
   /* Breakpoints widths */
   --medium-screen: 1008px;
 }
@@ -142,6 +145,10 @@ button {
 a {
   text-decoration: none;
   color: var(--black-space-cadet);
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .text-xlarge {
@@ -332,8 +339,92 @@ nav {
 .section {
   max-width: var(--max-width);
   margin: calc(var(--rythm) * 8) auto;
+  padding: calc(var(--rythm) * 3);
 }
 
+@media only screen and (min-width: 1008px) {
+  .project-card {
+    padding: 0;
+  }
+}
+
+/*
+ * Projects
+ */
+.projects {
+  & .content {
+    display: flex;
+    margin-top: calc(var(--rythm) * 6);
+  }
+
+  & .projects-cards {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  & .project-card {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 320px;
+    position: relative;
+
+    & img {
+      border-top-right-radius: var(--border-radius);
+      border-top-left-radius: var(--border-radius);
+      height: 180px;
+    }
+
+    & .project-overlay {
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 180px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 1;
+      border-top-right-radius: var(--border-radius);
+      border-top-left-radius: var(--border-radius);
+
+      & .MuiSvgIcon-fontSizeMedium {
+        width: calc(var(--rythm) * 5);
+        height: calc(var(--rythm) * 5);
+        fill: var(--blue-neon);
+        visibility: hidden;
+      }
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.8);
+
+        & .MuiSvgIcon-fontSizeMedium {
+          visibility: visible;
+        }
+      }
+    }
+
+    & .project-link {
+      display: block;
+      margin: calc(var(--rythm) * 2) 0;
+    }
+  }
+}
+
+@media only screen and (min-width: 1008px) {
+  .projects {
+    & .projects-cards {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+
+/*
+ * Footer
+ */
 .footer {
   max-width: var(--max-width);
   margin: calc(var(--rythm) * 3);
