Add modal window

--- a/public/global.css
+++ b/public/global.css
@@ -350,7 +350,7 @@ nav {
   }
 }
 
-main {
+.main {
   margin-top: calc(var(--rythm) * 8);
 }
 
@@ -477,4 +477,79 @@ main {
       padding: calc(var(--rythm) * 3) calc(var(--rythm) * 6);
     }
   }
+}
+
+/*
+ * Modals
+ */
+#modal-container {
+  position: fixed;
+  inset: 0 0 0 0;
+  background-color: rgba(28, 33, 60, 0.9); /* space-cadet */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+
+  &.none {
+    display: none;
+  }
+}
+
+.modal {
+  overflow-x: auto;
+  display: flex;
+  flex-direction: column;
+  margin: calc(var(--rythm) * 2);
+}
+
+.modal-header, .modal-footer {
+  display: flex;
+}
+
+.modal-header {
+  padding: calc(var(--rythm) * 3);
+  position: relative;
+  justify-content: space-between;
+}
+
+.modal-footer {
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.modal-body {
+  position: relative;
+  padding: 1px;
+  background-color: var(--grey-ghost-white);
+  border-radius: var(--border-radius);
+}
+
+.modal-body > iframe {
+  display: block;
+  aspect-ratio: 16 / 9;
+  max-width: 100%;
+  height: auto;
+  border-radius: var(--border-radius);
+}
+
+.modal-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  inset: 0 0 auto auto;
+
+  .MuiSvgIcon-fontSizeMedium {
+    fill: var(--white);
+    height: 32px;
+    width: 32px;
+    opacity: .8;
+
+    &:hover {
+      opacity: 1;
+      fill: var(--blue-neon);
+    }
+  }
+
 }
