--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,13 +46,13 @@ export interface Props {
 		<title>{title}</title>
 	</head>
 	<body>
-		<header>
+		<header class="header">
 			<Navigation locale={locale} active={active} />
 
 			<slot name="hero" />
 		</header>
 
-		<main>
+		<main class="main">
 			<slot />
 		</main>
 
