--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -92,7 +92,7 @@ export { getStaticPaths };
       <button id="video-player-button" class="video-thumbnail" data-video={showReelUrl}>
         <img src="/show-reel/2023-cover.jpg" />
 
-        <div class="video-overlay">
+        <div class="overlay video-overlay">
           <PlayCircleOutlineRoundedIcon />
         </div>
       </button>
